--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,5 +1,5 @@
 - name : Configure Docker on EC2 Instances
-  hosts : all
+  hosts : 172.31.45.42   #installing on prometheus sever 
   become: true
   connection : ssh
   tasks : 
@@ -13,4 +13,4 @@
     command : sudo systemctl start docker
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8084:8081 shubhamkushwah123/finance-me:1.0
+    command: docker run -itd -p 8081:8081 pradip698/banking-finance-project:v1
